force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Product Table</label>
    <nameField>
        <label>Product Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>