force-app/main/default/objects/Product__c/fields/AddedDate__c.field-meta.xml
<CustomField>
    <fullName>AddedDate__c</fullName>
    <description>Дата добавления продукта</description>
    <label>AddedDate</label>
    <type>DateTime</type>
</CustomField>