force-app/main/default/objects/Product__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>Цена продукта</description>
    <label>UnitPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>