force-app/main/default/objects/Product__c/fields/UnitsAvailable__c.field-meta.xml
<CustomField>
    <fullName>UnitsAvailable__c</fullName>
    <description>Количество доступных единиц</description>
    <label>UnitsAvailable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>