force-app/main/default/objects/Product__c/validationRules/CorrectPriceValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CorrectPriceValidation</fullName>
    <active>true</active>
    <description>Запрещает создание записей, если цена продукта меньше или равна 0</description>
    <errorConditionFormula>UnitPrice__c &lt;= 0</errorConditionFormula>
    <errorMessage>Product price must be greater then 0.</errorMessage>
</ValidationRule>